# app/controller/admin/momo.php
@@ -9,6 +9,9 @@ class AdminMomoController extends BaseController
             'momoid' => $this->request()->query('momoid', ''),
             'search' => $this->request()->query('search', ''),
             'group_search' => $this->request()->query('group_search', ''),
+            'isSayHi' => $this->request()->query('isSayHi', ''),
+            'is_self' => $this->request()->query('is_self', ''),
+            'online_status' => $this->request()->query('online_status', 'all'),
             'with_items' => $this->request()->query('with_items', 1),
             'page' => $this->request()->query('page', 1),
             'per_page' => $this->request()->query('per_page', 20),
